Quick and dirty market direction indicators

--- a/css/index.css
+++ b/css/index.css
@@ -30,3 +30,15 @@ body {
 .hidden {
   display: none;
 }
+
+.price .higher {
+    color: green;
+}
+
+.price .lower {
+    color: red;
+}
+
+.price .lower, .price .higher {
+    cursor: help
+}
