--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,4 @@
 body {
-    /* background-color: rgb(15, 29, 10); */
     background-color: black;
 }
 
@@ -28,8 +27,15 @@ td, th {
 }
 
 tr.updating td {
-    background-color: rgba(10, 10, 10);
     opacity: 100%;
+}
+
+tr td:first-of-type {
+    border-left: 3px solid black;
+}
+
+tr.updating td:first-of-type {
+    border-left: 3px solid #606c76;
 }
 
 .buttons-right > button {
@@ -101,6 +107,10 @@ tr td.asset-name i.up {
     color: green;
 }
 
+tr.hot {
+    background-color: #05160ca6;
+}
+
 tr.dead td a, tr.dead td span {
     opacity: 50%;
 }
@@ -108,7 +118,6 @@ tr.dead td a, tr.dead td span {
 tr.dead td.lag span {
     opacity: 100%;
 }
-
 
 tr td.asset-name i.dead {
     color: gray;
