--- a/css/index.css
+++ b/css/index.css
@@ -133,3 +133,7 @@ tr td.asset-name i.dead {
 tr.hot td.asset-name i.hot, tr.dead td.asset-name i.dead, tr.up td.asset-name i.up, tr.down td.asset-name i.down {
     display: inline-block;
 }
+
+.text-right {
+    text-align: right;
+}
